package es.artyhub.tienda_back.domain.enums;

public enum UserRole {
    ADMIN,
    USER
}
