@startuml

title Diagrama UML - Artyhub Backend

class User {
    - id : Long
    - name : String
    - email : String
    - password : String
    - nAccount : String
    - description : String
    - address : String
    - imageProfileUrl : String
    - role : UserRole
}

enum UserRole {
    ADMIN
    USER
}

class Artwork {
    - id : Long
    - name : String
    - description : String
    - imageUrl : String
    - price : BigDecimal
    - category : Category
    - user : User
}

class Category {
    - id : Long
    - name : String
}

class Detail {
    - id : Long
    - quantity : int
    - price : BigDecimal
}

class ShoppingCart {
    - id : Long
    - user : User
    - details : List<Detail>
    - payMethod : PayMethod
    - total : BigDecimal
    - state : String
}

class PayMethod {
    - id : Long
    - nTarget : String
    - dateExpiration : String
    - cvv : String
}

User -- "*" Artwork
User -- "0...1" ShoppingCart
User -- "*" PayMethod

Artwork "*" -- Category

ShoppingCart -- "*" Detail
ShoppingCart -- PayMethod

Detail -- "*" Artwork


@enduml